Add new media files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <link>Download Excursion (Coming soon!)</link>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like,
+      and recommends new points of interest around you.
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <link>Download Excursion (Coming soon!)</link>
+
+
+
+
+
 
   </body>
 </html>
