correct video link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <link>Download Excursion (Coming soon!)</link>
-    <video width="404" height="720" autoplay=""><source src="resources/css/style.css" type=video/mp4></video>
+    <video width="404" height="720" autoplay loop><source src="resources/excursion.mp4" type=video/mp4 /></video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like,
       and recommends new points of interest around you.
