--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <link>Download Excursion (Coming soon!)</link>
-    <video width="404" height="720" autoplay loop><source src="resources/excursion.mp4" type=video/mp4 /></video>
+    <p type=link id=top>Download Excursion (Coming soon!)</p>
+    <video width="404" height="720" autoplay loop><source src="resources/excursion.mp4" type=video/mp4 />
+    </video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like,
       and recommends new points of interest around you.
     </p>
+    <img id=camp  src=resources/camp.jpg />
+    <img id=icon src=resources/phone.png width="64" height="108"/>
     <h2>Coming Soon for iPhone and Android</h2>
-    <link>Download Excursion (Coming soon!)</link>
+    <p type=link id=bottom>Download Excursion (Coming soon!)</p>
 
 
 
