make final changes

--- a/index.html
+++ b/index.html
@@ -2,27 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Discover hidden places in the world around you</title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <title>Discover hidden places in the world around you</title>
+
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p type=link id=top>Download Excursion (Coming soon!)</p>
+    <p><a href="url">Download Excursion (Coming soon!)</a></p>
     <video width="404" height="720" autoplay loop><source src="resources/excursion.mp4" type=video/mp4 />
     </video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like,
       and recommends new points of interest around you.
     </p>
-    <img id=camp  src=resources/camp.jpg />
-    <img id=icon src=resources/phone.png width="64" height="108"/>
+    <img class=camp  src=resources/camp.jpg />
+    <br />
+    <img class=icon src=resources/phone.png width="64" height="108"/>
     <h2>Coming Soon for iPhone and Android</h2>
-    <p type=link id=bottom>Download Excursion (Coming soon!)</p>
-
-
-
-
-
+    <p><a href="url">Download Excursion (Coming soon!)</a></p>
+    <footer>© Excursion</footer>
 
   </body>
 </html>
